fix matching.jade (+2 squashed commits) Squashed commits: [ffc98e6] error message for matching without query [327c2cf] side menu, style bugs, better matching UI

--- a/public/stylesheets/chatRoom.css
+++ b/public/stylesheets/chatRoom.css
@@ -23,7 +23,6 @@ li {
 .titlehead {
   font-size: 10px;
   color: #fff;
-  height: 30px;
   background-color: #b1103c;
 }
 img {
@@ -31,9 +30,6 @@ img {
   width: 40px;
   height: 40px;
   margin: 0px;
-}
-div {
-  margin: 50px;
 }
 body {
   padding: 0;
